manifests/bleeding-edge/unleash/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: unleash
  labels:
    name: unleash
    app.kubernetes.io/name: unleash
    app.kubernetes.io/component: feature-flags
